fix: use font-display optional to eliminate font swap flicker

--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,7 @@
   font-family: "DM Sans";
   font-style: normal;
   font-weight: 100 1000;
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/dm-sans-latin.woff2") format("woff2");
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
@@ -14,7 +14,7 @@
   font-family: "Syne";
   font-style: normal;
   font-weight: 400 800;
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/syne-latin.woff2") format("woff2");
   unicode-range:
     U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
